Changelog for mk-heartbeat:

2007-12-16: version 1.0.4

   * Updated common code, added debugging.

2007-12-07: version 1.0.3

   * Updated common code.
   * Added --time, --interval and --skew options.
   * The combination of sleep() and alarm() did not work on some systems.

2007-11-04: version 1.0.2

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Added support for PostgreSQL with the --dbidriver option.
   * Replaced some code with modules.

2007-10-03: version 1.0.1

   * --check hung forever.

2007-09-20: version 1.0.0

   * Initial release.